--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~49.0.13",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.5"
   },
