--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-native": "0.72.5",
+    "react-native-safe-area-context": "^4.7.2",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-svg": "^13.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
