--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gluestack-style/react": "^0.2.51",
+    "@gluestack-ui/themed": "^0.1.55",
     "expo": "~49.0.13",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -17,7 +19,7 @@
     "react-native": "0.72.5",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-svg": "^13.14.0"
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
