Reconfigured Firebase SDKs and config files

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,9 +81,9 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
-    namespace "com.myreactnative"
+    namespace "com.isklutter"
     defaultConfig {
-        applicationId "com.myreactnative"
+        applicationId "com.isklutter"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
@@ -174,6 +174,13 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation platform('com.google.firebase:firebase-bom:32.3.1')
+    implementation 'com.google.firebase:firebase-analytics'
+}
+
+plugins {
+    id 'com.android.application'
 }
 
 apply from: new File(["node", "--print", "require.resolve('@react-native-community/cli-platform-android/package.json')"].execute(null, rootDir).text.trim(), "../native_modules.gradle");
