--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,6 +20,9 @@ buildscript {
         classpath('com.android.tools.build:gradle:7.4.2')
         classpath('com.facebook.react:react-native-gradle-plugin')
     }
+    plugins {
+        id 'com.google.gms.google-services' version '4.3.15' apply false
+    }
 }
 
 allprojects {
