--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-navigation": "^7.37.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.22.0",
