--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@gluestack-style/react": "^0.2.51",
-    "@gluestack-ui/themed": "^0.1.55",
+    "@gluestack-ui/themed": "^0.1.56",
+    "@gluestack/ui-next-adapter": "^2.1.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@types/react": "~18.2.14",
@@ -24,7 +25,8 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "^13.4.0",
+    "react-native-web": "^0.19.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
