--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   "dependencies": {
     "@gluestack-style/react": "^0.2.51",
     "@gluestack-ui/themed": "^0.1.55",
+    "@react-navigation/bottom-tabs": "^6.5.10",
+    "@react-navigation/material-bottom-tabs": "^6.2.18",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@types/react": "~18.2.14",
-    "expo": "~49.0.13",
+    "expo": "^49.0.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.72.5",
     "react-native-navigation": "^7.37.1",
+    "react-native-paper": "^5.11.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
