--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.14",
     "expo": "^49.0.0",
-    "expo-image-picker": "^14.5.0",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
