--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.20",
+    "@trendyol-js/react-carousel": "^3.0.2",
     "@types/react": "~18.2.14",
     "expo": "^49.0.0",
     "expo-image-picker": "~14.3.2",
@@ -27,16 +28,19 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.5.2",
     "native-base": "^3.4.28",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-navigation": "^7.37.1",
     "react-native-paper": "^5.11.0",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.1"
   },
