--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.3",
-    "@react-native-firebase/firestore": "^18.6.1",
+    "@react-native-firebase/firestore": "^18.7.3",
     "@react-native-firebase/storage": "^18.7.3",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.10",
@@ -36,6 +36,7 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-gifted-chat": "^2.4.0",
+    "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.37.1",
     "react-native-paper": "^5.11.0",
     "react-native-reanimated": "~3.3.0",
