--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.37.1",
     "react-native-paper": "^5.11.0",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-safe-area-view": "^1.1.1",
