--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@gluestack-style/react": "^0.2.51",
     "@gluestack-ui/themed": "^0.1.55",
     "@react-firebase/auth": "^0.2.10",
