--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/stack": "^6.3.20",
     "@types/react": "~18.2.79",
     "expo": "^51.0.5",
+    "expo-app-loading": "^2.1.1",
     "expo-image-picker": "~15.0.5",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
