--- a/package.json
+++ b/package.json
@@ -12,44 +12,44 @@
     "@gluestack-style/react": "^0.2.51",
     "@gluestack-ui/themed": "^0.1.55",
     "@react-firebase/auth": "^0.2.10",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/firestore": "^18.7.3",
     "@react-native-firebase/storage": "^18.7.3",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.10",
     "@react-navigation/material-bottom-tabs": "^6.2.18",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.20",
-    "@types/react": "~18.2.14",
-    "expo": "^49.0.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
+    "@types/react": "~18.2.79",
+    "expo": "^51.0.9",
+    "expo-image-picker": "~15.0.5",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.5.2",
     "native-base": "^3.4.28",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.74.1",
     "react-native-date-picker": "^5.0.0",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-modal": "^13.0.1",
     "react-native-navigation": "^7.37.1",
     "react-native-paper": "^5.11.0",
     "react-native-popup-menu": "^0.16.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
