--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "3.31.1",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.2.0",
     "react-native-vector-icons": "^10.0.1"
   },
